tests/fsharp/typecheck/sigs/neg15.bsl

neg15.fs(92,5,92,9): parse error FS0058: Nested type definitions are not allowed. Types must be defined at module or namespace level.
